# Agentic-RAG-System

./: .env.example  Customer_Churn_Prediction_using_ML.ipynb  WRITEUP.md  pyproject.toml  requirements.txt  streamlit_app.py
data/sample_docs/: assets_inventory.csv  expense_policy.txt  hr_remote_work.txt  incident_sop.txt  product_faq.txt  release_process.txt  research_notes.txt  security_policy.txt  support_playbook.txt  vendor_onboarding.md
enterprise-leave-asset-management/: README.md  requirements.txt
enterprise-leave-asset-management/app/: __init__.py  database.py  main.py  models.py  schemas.py  security.py
enterprise-leave-asset-management/frontend/: index.html  package-lock.json  package.json
enterprise-leave-asset-management/frontend/src/: main.jsx  styles.css
enterprise-leave-asset-management/tests/: test_rbac_workflows.py
scripts/: demo_queries.md
src/rag_agent/: __init__.py  agent.py  chunking.py  cli.py  config.py  embeddings.py  llm.py  loaders.py  models.py  vector_store.py
tests/: test_chunking.py  test_hashing_embedder.py
